--- a/client/style/main.css
+++ b/client/style/main.css
@@ -46,7 +46,7 @@ body {
     justify-content: space-between;
     background: rgb(6,36,85);
     background: linear-gradient(180deg, rgba(6,36,85,1) 79%, rgba(3,85,147,0.02) 100%);
-    height: 28px;
+    height: 32px;
     width: 100%;
 }
 
@@ -54,18 +54,24 @@ body {
     margin: 0%;
     padding: 0px;
     margin-right: 20px;
+    font-size: medium;
 }
 
 .menu-button {
     margin-left: 20px;
     text-decoration: none;
+    font-size: medium;
+}
+
+.menu-button:hover {
+    color: chocolate;
 }
 
 .top-menu {
     background-color: rgba(3,85,147,0.5);
 	position: absolute;
 	left: 13px;
-	top: 26px;
+	top: 29px;
 	border: solid 1px;
 	border-top: none;
 	border-radius: 0px 0px 6px 6px;
@@ -84,6 +90,10 @@ body {
 	margin-top: 0.5px;
 	margin-bottom: 0.5px;
 	text-decoration: none;
+}
+
+.menu-label:hover {
+    color: chocolate;
 }
 
 .main-window {
@@ -113,6 +123,7 @@ body {
 .single-icon {
     width: 24%;
     height: 45%;
+    cursor: pointer;
 }
 
 .icon-image {
